<resources>

    <string name="GoBtn">Start</string>

    <string name="app_name">냥바디</string>
    <string name="main_measure_body_comment">몸둘레와 다리길이를 측정 해 주세요</string>
    <string name="body_measure">몸 둘레</string>
    <string name="leg_measure">다리 길이</string>
    <string name="centimeter">Cm</string>
    <string name="calculation">계산하기</string>

    <string name="formulaText">계산식</string>
    <string name="formula">Feline Body Mass Index (FBMI)\n\n체지방율(%) = ((((몸둘레) / 0.7062) - 다리길이) / 0.9156) - 다리길이) </string>
    <string name="closeBtn">닫기</string>

    <string name="bodyMeasureTooltipText">9번째 갈비뼈를 기준으로 몸둘레를 측정해야 정확하지만, 고양이가 서 있을 때 몸에서 가장 두꺼운 부분을 측정하셔도 괜찮습니다.</string>
    <string name="legMeasureTooltipText">무릎부터 뒷발목까지의 정강이뼈 길이를 측정해야 정확합니다. 고양이가 앉을 때 땅에 닿는 부분이 아닙니다. 만약 고양이가 자꾸 움직여서 측정하기 어려울 경우 옆으로 누워 있거나 잠잘 때 측정하면 편합니다. </string>
    <string name="readmeText">이후에 등장하는 모든 내용은 참고용으로만 사용하시고, 의학적인 최종 판단은 반드시 의사 또는 전문가와 상담하시기 바랍니다.</string>
    <string name="readmeYes">예</string>
    <string name="readmeNo">아니오</string>



    <string name="splash_title">냥바디 (Cat BMI)</string>
    
    <string name="yourCatIs">당신의 고양이는</string>

    <string name="FBMI">체지방률 :</string>
    <string name="FBMIPercent">%</string>

    <string name="SeverelyUnderweight">심각한 저체중</string>
    <string name="Underweight">저체중</string>
    <string name="TooThin">마른 상태</string>
    <string name="Ideal">정상 체중</string>
    <string name="AboveIdeal">통통한 상태</string>
    <string name="Overweight">과체중</string>
    <string name="Obese">비만</string>
    <string name="SeverelyObese">심각한 비만</string>

    <string name="Is">입니다.</string>


    <string name="status">상태</string>

    <string name="tv1_status_text">심각한 저체중입니다. 지방이 전혀 보이거나 만져지지 않습니다. 배가 홀쭉하고 눈으로도 갈비뼈,
        등뼈를 포함한 온몸의 뼈가 쉽게 관찰됩니다. 가죽만 남아있는 것처럼 느껴집니다.</string>
    <string name="tv2_status_text">저체중입니다. 지방이 잘 보이거나 만져지지 않습니다. 배가 홀쭉하고 갈비뼈가 쉽게 만져집니다.
        눈으로 봤을 때 등과 갈비뼈 부분이 쉽게 관찰됩니다. 위에서 봤을 때 심하게 마른 느낌이 듭니다.</string>
    <string name="tv3_status_text">마른 상태입니다. 지방이 아주 약간 보이는 상태입니다. 배가 홀쭉하고 갈비뼈가 쉽게 만져집니다.
        눈으로 봤을 때 갈비뼈를 제외한 부분의 뼈는 잘 보이지 않습니다. 위에서 봤을 때 허리가 잘록합니다.</string>
    <string name="tv4_status_text">균형이 잘 잡힌 이상적인 체중입니다. 배는 평평하고 약간의 지방이 있습니다.
        손으로 만지면 갈비뼈가 느껴집니다. 위에서 봤을 때 허리의 위치가 확인됩니다.</string>
    <string name="tv5_status_text">균형이 잘 잡힌 이상적인 체중입니다. 배에는 약간의 지방이 있어서 조금 아래로 내려와
        있지만 심하지 않습니다. 손으로 만지면 갈비뼈가 느껴집니다.위에서 봤을 때 허리의 위치가 확인됩니다.</string>
    <string name="tv6_status_text">약간 통통하게 느껴지는 체중입니다. 조금 과도한 지방과 함께 힘들게 갈비뼈가 만져집니다.
        배는 지방이 많아서 아래로 어느정도 내려와 있습니다. 위에서 봤을 때 허리의 굴곡이 없습니다.</string>
    <string name="tv7_status_text">과체중입니다. 지방이 두꺼워서 갈비뼈를 만지기가 힘듭니다. 배는 지방이 많아서 아래로 많이
        내려와 있습니다. 위에서 봤을 때 허리부분이 둥글게 나와 있습니다.  </string>
    <string name="tv8_status_text">비만입니다. 지방이 많이 쌓여서 더이상 갈비뼈는 만져지지 않습니다. 배에 지방이 과도하게 많아서
        아래로 심하게 내려와 있고 걸을 때 출렁입니다. 위에서 봤을 때 허리부분이 많이 둥글게 나와 있습니다. </string>
    <string name="tv9_status_text">심각한 비만입니다. 지방이 심각하게 쌓여서 갈비뼈가 전혀 만져지지 않습니다. 배에 지방이 과도하게
        많아서 아래로 심하게 내려와 있고 걸을 때 바닥에 닿기도 합니다. 허리부분은 지방이 많이 쌓여 단단하고 둥글게 튀어 나와 있습니다.
        얼굴에도 살이 찝니다.</string>

    <string name="Diagnosis">진단</string>

    <string name="tv1_diag_text">
        많은 사람들이 고양이가 살찌는 것을 걱정하지만, 의도하지 않은 체중 감소도 심각한 문제가 될 수 있습니다.
        고양이의 체중 감소 원인에 따라 식욕이 감소하거나 완전히 음식을 먹지 않을 수도 있습니다.
        음식을 거부하는 거식증에 걸린 고양이는 간 지질증 또는 지방간이 발생할 수 있으며 건강에 매우 위험합니다.
        하지만 고양이가 정상적인 양의 음식을 먹더라도 체중이 줄어들기도 합니다.
        질병으로 인한 고양이의 체중 감소의 원인 중 하나는 당뇨병입니다.
        당뇨병에 걸린 고양이는 식욕이 떨어지고 물을 과도하게 마시므로 평소보다 더 많은 소변을 봅니다.
        아니면 고양이가 평소보다 더 많이 음식을 먹는 것을 관찰했지만 여전히 체중이 줄고 있다면 갑상선 기능 항진증일 수 있습니다.
        갑상선 호르몬 수치를 증가시키는 갑상선의 양성 호르몬 생성 종양은 갑상선 기능 항진증을 유발할 것입니다.
        나이가 10살 이상인 고양이는 갑상선 기능 항진증이 발병하기 쉽습니다.
        또한 나이 든 고양이의 경우 집사님들이 생각하는 것보다 암에 걸리는 경우가 많이 있습니다.
        나이 든 고양이의 약 30%가 암으로 사망한다는 연구결과도 있습니다.
        암에 걸린 고양이가 저체중이 되는 것은 흔한 원인입니다.
        이런저런 관찰만으로 고양이가 살이 빠지는 원인을 발견할 수 없다면, 고양이가 병에 걸렸을지도 모른다는 생각을 해야 합니다.
        고양이는 강아지와는 다르게 아픈 것을 참고 숨기는 경향이 있습니다.
        질병이 의심되는 경우 반드시 수의사를 방문해야 합니다.
    </string>
    <string name="tv2_diag_text">
        고양이가 먹는 것을 좋아하는 편인데도 살이 빠진다면 집에 여러마리의 고양이가 있을 경우 다른 고양이가 음식을 지키고 있어
        사료를 먹지 못하는 건 아닌지 확인해야 합니다.
        또 고양이는 매우 예민한 동물이기때문에 음식의 냄새, 맛, 식감, 음식의 종류, 수분함유량, 음식의 온도, 브랜드,
        밥그릇의 위치나 주변에 화장실 또는 물그릇이 얼마나 가까운지 등 여러가지 이유로 인해 음식을 잘 먹지 않기도 합니다.
        하지만 단순히 마른 정도가 아닌 저체중일 경우 질병의 가능성을 염두에 두어야 합니다.
        치아흡수병변, 구내염, 충치, 구강 내 출혈, 통증, 상처, 골절 등 복합적인 구강질환으로 인해 음식을 제대로 먹지
        못하는 것은 아닌지 확인이 필요합니다.
        설명할 수 없는 체중 감소는 질병의 징후일 수 있습니다.
        질병이 의심되는 경우 반드시 수의사를 방문해야 합니다.
</string>
    <string name="tv3_diag_text">마른 고양이의 두 가지 주요 원인은 음식을 충분히 섭취하지 않거나
        섭취하는 양보다 더 많은 칼로리를 소비하는 것입니다.
        불안, 스트레스 등 심리적으로 압박을 받는 반려묘는 음식을 잘 먹지 않아서 체중이 감소할 수 있습니다.
        고양이는 예민한 동물이어서 다른 고양이, 집의 이사, 낯선 사람의 방문, 과도한 소음, 낯선 냄새, 거울, 밥그릇, 물그릇, 화장실의 위치,
        지저분한 집, 변화된 집사의 퇴근시간까지 모든 사소한 것들에 스트레스를 받을 수 있습니다.
        고양이는 규칙적인 일정에 따라 하루를 보내는 것을 좋아하고 어떤 변화라도 스트레스로 다가옵니다.
        또는 너무 활동적인 고양이의 경우 입맛에 맞게 사료를 바꾸거나 사료의 양을 늘려서 체중 조절에 신경 써 주세요. </string>
    <string name="tv4_diag_text">고양이가 현재 건강한 체중 상태 입니다. 행복한 고양이가 체중을 지금처럼 안정적으로 유지하기 위해
        규칙적인 운동과 좋은 식사 습관을 계속 유지 해 주세요.</string>
    <string name="tv5_diag_text">고양이가 현재 건강한 체중 상태 입니다. 행복한 고양이가 체중을 지금처럼 안정적으로 유지하기 위해
        규칙적인 운동과 좋은 식사 습관을 계속 유지 해 주세요.</string>
    <string name="tv6_diag_text">고양이가 약간 통통한 상태입니다. 체중이 계속 증가한다면 과체중이 되어 관절염, 심장병, 당뇨등의 질환이 발생할 수
        있으므로 지금부터 관리하는 것이 중요합니다.고양이는 산책을 할 수 없기 때문에 실내에서 장난감으로 많이 놀아주고, 캣 타워를 이용하여 운동을
        시켜주는 것이 좋습니다. 간식을 줄이는 것도 좋은 방법입니다.</string>
    <string name="tv7_diag_text">고양이가 현재 과체중인 상태입니다. 건강관리의 기본은 사료량을 조절하는 방법입니다.
        중성화를 했다면 살이 쉽게 찌기때문에 체중 조절을 위해 사료를 다이어트 사료로 바꾸어 주면 체중관리에 도움을 줄 수 있습니다.
        고단백, 저탄수화물, 저지방의 사료를 섭취하게 되면 건강을 해치지 않고 체형을 조절할 수 있게 됩니다.
        사람과 마찬가지로 비만은 여러가지 질병의 원인이 될 수 있기 때문에 체중조절이 필요합니다.
        자율급식보다는 제한급식을 하는편이 좋고 고양이가 원할 때마다 원하는 만큼 사료를 먹는 것은 좋지 않습니다.
        활동량이 부족한 고양이라면 집사님들이 충분히 시간을 들여서 함께 놀아주는 것도 좋은 방법입니다.
        캣타워나, 캣휠, 다양한 장난감을 이용해서 질리지 않게 충분히 놀아주세요.
        </string>
    <string name="tv8_diag_text">고양이가 현재 비만인 상태입니다. 현재 사료 외에 간식을 많이 주고 있다면 간식도 줄여야 합니다.
        간식은 적은 양일지라도 칼로리가 높습니다. 간식을 끊기 힘들다면 서서히 줄여가는 것이 좋습니다.
        고양이의 비만은 고양이의 수명을 단축시키고 질병에 걸릴 가능성을 높입니다.
        매일 봐와서 문제가 없는 수준이라고 생각할지 모르지만 이상적인 체중의 고양이에 비해서
        과체중이거나 비만인 고양이는 8~12세에서 사망률이 2.8배나 증가하는 것으로 나타났습니다.
        하지만 급격하게 살을 빼기 위해 음식 섭취를 과도하게 제한하면 지방간이 발생할 수 있습니다.
        지방간은 길고양이들이나 유기묘들에게 많이 발생되는 질병인 만큼 위험하기 때문에 무조건 굶어서 다이어트를 하지 말고 가능한 빨리
        수의사와 상담하고 고양이를 검사하여 식이조절 및 적절한 체중 감량 프로그램 실행하는 것이 좋습니다.
    </string>
    <string name="tv9_diag_text">고양이가 현재 매우 심각한 비만인 상태입니다. 고양이의 과체중은 놀이 시간의 감소와 우울증으로 이어질 수 있습니다.
        심지어 건강한 체중의 고양이와 비교시, 당신의 반려묘의 기대 수명 또한 심각하게 짧아질 수 있습니다.
        고양이가 비만일 경우 다리 관절이 몸무게를 견디지 못해 퇴행성 관절염이 발생할 수 있고, 당뇨병, 췌장염, 호흡기 질환 등을
        야기할 수 있습니다.
        에너지 불균형이 발생하면 갑상선기능저하증, 부신피질기능항진증, 당뇨병 등 심각한 질환이 발생할 가능성도 높아집니다.
        특히 고양이가 한마리 이상 있는 가정에서는 비만 고양이의 식단을 관리하는 것이 어려울 수 있습니다.
        일부 고양이는 다른 고양이가 남긴 음식을 먹을 수 있기 때문입니다.
        또 어떤 고양이는 다른 고양이와 함께 생활하는 것에서 스트레스를 받아서 과식할 수도 있습니다.
        다른 방에서 먹이를 주는 것이 도움이 될 수도 있습니다.
        급격하게 살을 빼기 위해 음식 섭취를 제대로 하지 못하면 지방간이 발생할 수 있습니다.
        심하게 과체중인 고양이가 이상적인 신체 상태에 도달하는 데 최대 1년이 걸릴 수 있습니다.
        매일 보는 내 고양이의 변화는 눈치채기 어렵기때문에 정기적으로 체중이나 체지방율을 측정하는 것이 좋습니다.
        특히 심각한 비만인 고양이는 무리한 운동이나 무리한 식단조절보다는 건강진단부터 비만의 원인, 식단 조절까지 도움을 줄 수 있는
        수의사 상담을 먼저 받는 것이 좋습니다.
        수의사에게 고양이의 건강상태를 확인 후, 무리한 식단조절이 아닌 적절한 영양공급과 운동으로 건강관리에 성공할 수 있습니다.
        </string>
    
</resources>